changed the data treatment in the lab

--- a/labs/MinMaxScaler practice.ipynb
+++ b/labs/MinMaxScaler practice.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3fe81ce5",
+   "id": "2ece99c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "58e5bf43",
+   "id": "a7fe7526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fe27ef56",
+   "id": "c7d98b08",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0386fd1",
+   "id": "398fc715",
    "metadata": {
     "scrolled": false
    },
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0d25b461",
+   "id": "0b429c7b",
    "metadata": {
     "collapsed": true
    },
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "918628ba",
+   "id": "f5081de1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a5eb913f",
+   "id": "bb3fe5e8",
    "metadata": {
     "scrolled": true
    },
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29bbd8b",
+   "id": "08a79c9c",
    "metadata": {},
    "source": [
     "APPLYING POWER TRANSPORTATION"
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a581230d",
+   "id": "02a85efc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c57434ec",
+   "id": "9384ce5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "633de4c5",
+   "id": "8748e25b",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2f18ea54",
+   "id": "23f1d151",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c80a05ee",
+   "id": "4d165deb",
    "metadata": {
     "scrolled": true
    },
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "35cc4057",
+   "id": "deea1a2d",
    "metadata": {},
    "outputs": [
     {
@@ -976,11 +976,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f615da3",
+   "id": "87bd8ddd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import OrdinalEncoder"
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "\n",
+    "# Example DataFrame with an ordinal categorical column\n",
+    "data = {'Education': ['High School or Below', 'Bachelor', 'Master', 'College', 'Doctor']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Create an instance of OrdinalEncoder\n",
+    "ordinal_encoder = OrdinalEncoder(categories=[['High School or Below', 'College', 'Bachelor', 'Master', 'Doctor']])\n",
+    "\n",
+    "# Fit and transform the ordinal column\n",
+    "df['Education_Encoded'] = ordinal_encoder.fit_transform(df[['Education']])\n",
+    "\n",
+    "# Display the result\n",
+    "print(df)"
    ]
   }
  ],
