--- a/labs/Lab 30.01_X-y split.ipynb
+++ b/labs/Lab 30.01_X-y split.ipynb
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "8108caf8",
    "metadata": {},
    "outputs": [],
@@ -1104,12 +1104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "a54668d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression"
+    "lr=LinearRegression()"
    ]
   },
   {
