--- a/labs/Lab_hypothesys_testing.ipynb
+++ b/labs/Lab_hypothesys_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7fd8d6d5",
+   "id": "90a074e7",
    "metadata": {},
    "source": [
     "It is assumed that the mean systolic blood pressure is μ = 120 mm Hg. In the Honolulu Heart Study, a sample of n = 100 people had an average systolic blood pressure of 130.1 mm Hg with a standard deviation of 21.21 mm Hg. Is the group significantly different (with respect to systolic blood pressure!) from the regular population?\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02765fdf",
+   "id": "99f575b0",
    "metadata": {},
    "source": [
     "HYPOTHESYS\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "88389564",
+   "id": "a34091c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,42 +55,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4a07be88",
+   "execution_count": 18,
+   "id": "65b70955",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'spicy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m zc \u001b[38;5;241m=\u001b[39m stats\u001b[38;5;241m.\u001b[39mnorm\u001b[38;5;241m.\u001b[39mppf(\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.05\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m) \u001b[38;5;66;03m#as it's 2 tailed\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m t\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m-\u001b[39mspicy\u001b[38;5;241m.\u001b[39mstats\u001b[38;5;241m.\u001b[39mt\u001b[38;5;241m.\u001b[39mppf(\u001b[38;5;241m0.95\u001b[39m, df\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m99\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'spicy' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.020383994836880425\n"
      ]
     }
    ],
    "source": [
     "zc = stats.norm.ppf(1-0.05/2) #as it's 2 tailed\n",
-    "t=+-scipyy.stats.t.ppf(0.95, df=99)"
+    "t=+-stats.t.ppf(0.95, df=99)\n",
+    "p_value = stats.t.sf(2.08, df=79)\n",
+    "print(p_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "91c189fe",
+   "execution_count": 17,
+   "id": "4009ba95",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 't' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(z,zc, t)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 't' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.761904761904759 1.959963984540054 -1.6603911559963895\n"
      ]
     }
    ],
@@ -101,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "17d9e4f0",
+   "id": "dc62dfc4",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88706d58",
+   "id": "7c4c807c",
    "metadata": {},
    "outputs": [],
    "source": []
