--- a/labs/Lab_hypothesys_testing.ipynb
+++ b/labs/Lab_hypothesys_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90a074e7",
+   "id": "33a421a3",
    "metadata": {},
    "source": [
     "It is assumed that the mean systolic blood pressure is μ = 120 mm Hg. In the Honolulu Heart Study, a sample of n = 100 people had an average systolic blood pressure of 130.1 mm Hg with a standard deviation of 21.21 mm Hg. Is the group significantly different (with respect to systolic blood pressure!) from the regular population?\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99f575b0",
+   "id": "e15b31b5",
    "metadata": {},
    "source": [
     "HYPOTHESYS\n",
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a34091c3",
+   "execution_count": 27,
+   "id": "675c95fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,57 +45,37 @@
     "\n",
     "sample_mean = 130.1\n",
     "pop_mean = 120\n",
-    "samp_std_dev = 21.21\n",
+    "sample_std= 21.21\n",
     "m=100\n",
-    "\n",
-    "#z=(x average - mu)/SE   SE=np.std(pop)/np.sqrt(samp_size)\n",
-    "\n",
-    "z=(sample_mean-pop_mean)/(samp_std_dev/np.sqrt(m))"
+    "alpha=0.05\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "65b70955",
+   "execution_count": 30,
+   "id": "f5e1730b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.020383994836880425\n"
+      "4.761904761904759 6.562701817208617e-06 1.9842169515086827\n"
      ]
     }
    ],
    "source": [
-    "zc = stats.norm.ppf(1-0.05/2) #as it's 2 tailed\n",
-    "t=+-stats.t.ppf(0.95, df=99)\n",
-    "p_value = stats.t.sf(2.08, df=79)\n",
-    "print(p_value)"
+    "t_statistic = (sample_mean - pop_mean) / (sample_std / (m ** 0.5))\n",
+    "degrees_of_freedom = m - 1\n",
+    "p_value = 2 * stats.t.sf(abs(t_statistic), df=degrees_of_freedom)\n",
+    "critical_t_value = stats.t.ppf(1 - alpha / 2, df=degrees_of_freedom)\n",
+    "print(t_statistic, p_value, critical_t_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "4009ba95",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.761904761904759 1.959963984540054 -1.6603911559963895\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(z,zc, t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "dc62dfc4",
+   "execution_count": 21,
+   "id": "71b135c0",
    "metadata": {},
    "outputs": [
     {
@@ -107,16 +87,16 @@
     }
    ],
    "source": [
-    "if np.abs(z) > zc:\n",
-    "   print(\"AV Blood pressure is higher in Honolulu\")\n",
+    "if p_value > alpha:\n",
+    "   print(\"AV Blood pressure is not higher in Honolulu\")\n",
     "else:\n",
-    "   print(\"AV Blood pressure is not higher in Honolulu\")"
+    "   print(\"AV Blood pressure is higher in Honolulu\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c4c807c",
+   "id": "cb94e48a",
    "metadata": {},
    "outputs": [],
    "source": []
