--- a/labs/Lab_hypothesys_testing.ipynb
+++ b/labs/Lab_hypothesys_testing.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "675c95fb",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "f5e1730b",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "71b135c0",
    "metadata": {},
    "outputs": [
@@ -82,15 +82,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AV Blood pressure is higher in Honolulu\n"
+      "AV Blood pressure is not higher in Honolulu, average was wrong\n"
      ]
     }
    ],
    "source": [
     "if p_value > alpha:\n",
-    "   print(\"AV Blood pressure is not higher in Honolulu\")\n",
+    "   print(\"AV Blood pressure is higher in Honolulu, but population average is correct\")\n",
     "else:\n",
-    "   print(\"AV Blood pressure is higher in Honolulu\")"
+    "   print(\"AV Blood pressure is not higher in Honolulu, average was wrong\")"
    ]
   },
   {
