--- a/MidTermProject/rent prediction.ipynb
+++ b/MidTermProject/rent prediction.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "dcc272b7",
+   "execution_count": 207,
+   "id": "63483447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,10 +12,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
-   "id": "403ea40d",
+   "execution_count": 208,
+   "id": "6f84dab4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0xad in position 61371: invalid start byte",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[208], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://raw.githubusercontent.com/okravtsova123/ironhack_study/main/MidTermProject/rent.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:912\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m    899\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m    900\u001b[0m     dialect,\n\u001b[0;32m    901\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    908\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[0;32m    909\u001b[0m )\n\u001b[0;32m    910\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m--> 912\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:583\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    580\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n\u001b[0;32m    582\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m parser:\n\u001b[1;32m--> 583\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\u001b[38;5;241m.\u001b[39mread(nrows)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1704\u001b[0m, in \u001b[0;36mTextFileReader.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   1697\u001b[0m nrows \u001b[38;5;241m=\u001b[39m validate_integer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnrows\u001b[39m\u001b[38;5;124m\"\u001b[39m, nrows)\n\u001b[0;32m   1698\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1699\u001b[0m     \u001b[38;5;66;03m# error: \"ParserBase\" has no attribute \"read\"\u001b[39;00m\n\u001b[0;32m   1700\u001b[0m     (\n\u001b[0;32m   1701\u001b[0m         index,\n\u001b[0;32m   1702\u001b[0m         columns,\n\u001b[0;32m   1703\u001b[0m         col_dict,\n\u001b[1;32m-> 1704\u001b[0m     ) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mread(  \u001b[38;5;66;03m# type: ignore[attr-defined]\u001b[39;00m\n\u001b[0;32m   1705\u001b[0m         nrows\n\u001b[0;32m   1706\u001b[0m     )\n\u001b[0;32m   1707\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1708\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\io\\parsers\\c_parser_wrapper.py:234\u001b[0m, in \u001b[0;36mCParserWrapper.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m    232\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    233\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlow_memory:\n\u001b[1;32m--> 234\u001b[0m         chunks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reader\u001b[38;5;241m.\u001b[39mread_low_memory(nrows)\n\u001b[0;32m    235\u001b[0m         \u001b[38;5;66;03m# destructive to chunks\u001b[39;00m\n\u001b[0;32m    236\u001b[0m         data \u001b[38;5;241m=\u001b[39m _concatenate_chunks(chunks)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\parsers.pyx:814\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.read_low_memory\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\parsers.pyx:875\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\parsers.pyx:850\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\parsers.pyx:861\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._check_tokenize_status\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\parsers.pyx:2021\u001b[0m, in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xad in position 61371: invalid start byte"
+     ]
+    }
+   ],
    "source": [
     "df=pd.read_csv('https://raw.githubusercontent.com/okravtsova123/ironhack_study/main/MidTermProject/rent.csv', sep=';')"
    ]
@@ -23,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39e34917",
+   "id": "6f26e78e",
    "metadata": {
     "scrolled": true
    },
@@ -35,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "0e4ab1ec",
+   "id": "4093544f",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "531744cb",
+   "id": "dfb661de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "c5ad8b86",
+   "id": "c044ed03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "b6dae86b",
+   "id": "4e969095",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "6869d712",
+   "id": "4c370e1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "9c585362",
+   "id": "980bac0d",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "e65eeee6",
+   "id": "be342529",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "6ed3ee6e",
+   "id": "6b5b81a6",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "700f9d36",
+   "id": "4dd941ac",
    "metadata": {
     "scrolled": true
    },
@@ -444,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "8aab75b2",
+   "id": "87d06795",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "144e4af6",
+   "id": "10507b81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "63af8377",
+   "id": "6c5506e9",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "a6d1bcc8",
+   "id": "d7c7e2d1",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "ff145440",
+   "id": "094b87b5",
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddc10d44",
+   "id": "fd964799",
    "metadata": {},
    "outputs": [],
    "source": []
