--- a/labs/Lab-Classification.ipynb
+++ b/labs/Lab-Classification.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a78ae93",
+   "id": "f28797fa",
    "metadata": {},
    "source": [
     "###   * Scale the features either by using normalizer or a standard scaler."
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e20682f",
+   "id": "237de5b1",
    "metadata": {},
    "source": [
     "###      * (optional)Fit a logistic Regression model on the training data"
@@ -633,11 +633,11 @@
     "#fitting LOGISTICS REGRESSION\n",
     "\n",
     "log_model = LogisticRegression() # weights to be added if we want to avoid fall negative or fall positive\n",
-    "log_model.fit(X_train, y_train)\n",
+    "log_model.fit(X_train_pt, y_train)\n",
     "\n",
     "# predicting data\n",
-    "y_pred_train = log_model.predict(X_train)\n",
-    "y_pred_test = log_model.predict(X_test)\n",
+    "y_pred_train = log_model.predict(X_train_pt)\n",
+    "y_pred_test = log_model.predict(X_test_pt)\n",
     "\n",
     "\n",
     "#results\n",
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7b5579",
+   "id": "c25f48eb",
    "metadata": {},
    "source": [
     "\n",
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330139a8",
+   "id": "6d6dd777",
    "metadata": {},
    "source": [
     "## Round 2\n",
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "54236a50",
+   "id": "ef90951d",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6defc24e",
+   "id": "777af242",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d14a3279",
+   "id": "26c578e4",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8040b6ea",
+   "id": "2b3994fc",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9a37c0",
+   "id": "96e14ae7",
    "metadata": {},
    "source": [
     "### Create a function that takes a list of integers as input and trains and tests a Decision Tree Classifier using each integer as max_depth"
@@ -1029,8 +1029,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "53429d70",
+   "execution_count": 60,
+   "id": "ec44852d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,18 +1063,13 @@
     "                                        precision_score(y_test, y_pred_test_dt),\n",
     "                                        recall_score(y_test, y_pred_test_dt)]})\n",
     "        print(f\"performance_df for max_depth={depth}\")\n",
-    "        display(performance_df)\n",
-    "        \n",
-    "        fig, axes = plt.subplots(nrows = 1,ncols = 1,figsize = (34,20))\n",
-    "\n",
-    "        plot_tree(model,filled = True, rounded=True,feature_names=list(X.columns))\n",
-    "        plt.show() "
+    "        display(performance_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a4f03e9c",
+   "id": "ea264463",
    "metadata": {},
    "outputs": [
     {
@@ -1478,9 +1473,231 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d4642c1",
+   "metadata": {},
+   "source": [
+    "## Round 3\n",
+    "\n",
+    "### apply K-fold cross validation on your models before and check the model score. Note: So far we have not balanced the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "43ced030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train and test split\n",
+    "X_train, X_test,y_train, y_test=train_test_split(X,y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "c4d991f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upsampling using SMOTE\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "smote = SMOTE()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "e75cdd2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Churn\n",
+       "No       3892\n",
+       "Yes      1390\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "2b579fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Churn\n",
+       "No       3892\n",
+       "Yes      3892\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#upsampling\n",
+    "X_train_sm, y_train_sm = smote.fit_resample(X_train, y_train)\n",
+    "y_train_sm.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "6b1d1686",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scaling\n",
+    "pt=PowerTransformer()\n",
+    "pt.fit(X_train_sm)\n",
+    "X_train_sm_pt=pt.transform(X_train_sm)\n",
+    "X_test_pt=pt.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "c91257ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mapping to get 0/1 in y_train and y_test for model\n",
+    "mapping = {'No': 0, 'Yes': 1}\n",
+    "y_train=y_train[\"Churn\"].map(mapping)\n",
+    "y_test=y_test[\"Churn\"].map(mapping)\n",
+    "y_train_sm=y_train_sm[\"Churn\"].map(mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "2f2ddc7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-3 {color: black;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier(max_depth=3)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier(max_depth=3)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "DecisionTreeClassifier(max_depth=3)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#creating model for logistics regression\n",
+    "log_model = LogisticRegression() # weights to be added if we want to avoid fall negative or fall positive\n",
+    "log_model.fit(X_train_sm_pt, y_train_sm)\n",
+    "\n",
+    "#creating model - KNN\n",
+    "KNN_model = KNeighborsClassifier(n_neighbors=5,weights='uniform') # declare we're using knn classification model\n",
+    "KNN_model.fit(X_train_sm_pt, y_train_sm) # train model\n",
+    "\n",
+    "#creating model for decision tree\n",
+    "dt_model = DecisionTreeClassifier(max_depth=3)\n",
+    "dt_model.fit(X_train_sm_pt, y_train_sm) #scaled but that's not mandatory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "2010806a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Logistics regression</th>\n",
+       "      <th>KNN</th>\n",
+       "      <th>Decision tree</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean_score</th>\n",
+       "      <td>0.727134</td>\n",
+       "      <td>0.782247</td>\n",
+       "      <td>0.725334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std_dev</th>\n",
+       "      <td>0.006813</td>\n",
+       "      <td>0.014091</td>\n",
+       "      <td>0.008507</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Logistics regression       KNN  Decision tree\n",
+       "mean_score              0.727134  0.782247       0.725334\n",
+       "std_dev                 0.006813  0.014091       0.008507"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#comparing model\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "model_pipeline = [log_model, KNN_model, dt_model]\n",
+    "model_names = ['Logistics regression', 'KNN', 'Decision tree']\n",
+    "scores = {}\n",
+    "i=0\n",
+    "for model in model_pipeline:\n",
+    "    mean_score = np.mean(cross_val_score(model, X_train_sm_pt, y_train_sm, cv=5))\n",
+    "    std_dev = np.std(cross_val_score(model, X_train_sm_pt, y_train_sm, cv=5))\n",
+    "    scores[model_names[i]] = {'mean_score': mean_score, 'std_dev': std_dev}\n",
+    "    i = i+1\n",
+    "\n",
+    "pd.DataFrame(scores)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb19937",
+   "id": "55222488",
    "metadata": {},
    "outputs": [],
    "source": []
